RESOLVED FIXED 82010
[Shadow DOM] InsertionPoint should have isActive() member function.
https://bugs.webkit.org/show_bug.cgi?id=82010
Summary [Shadow DOM] InsertionPoint should have isActive() member function.
Hayato Ito
Reported 2012-03-22 21:16:34 PDT
According to the Shadow DOM spec, each InsertionPoint is either 'active' or 'inactive'. it will be useful if InsertionPoint has isActive() member function so that we can know it easily. One use case is ReifiedTreeTraversal. See the comment on https://bugs.webkit.org/show_bug.cgi?id=79197#c34.
Attachments
Patch (9.64 KB, patch)
2012-04-04 20:54 PDT, Takashi Sakamoto
no flags
Patch (9.92 KB, patch)
2012-04-08 20:41 PDT, Takashi Sakamoto
no flags
Patch (9.75 KB, patch)
2012-04-10 21:44 PDT, Takashi Sakamoto
no flags
Takashi Sakamoto
Comment 1 2012-04-04 20:54:06 PDT
Hajime Morrita
Comment 2 2012-04-08 17:40:02 PDT
Comment on attachment 135751 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=135751&action=review > Source/WebCore/ChangeLog:3 > + [Shadow DOM] InsertionPoint should have isActive() member function. This change doesn't look just adding a member function. It also affects the behavior. Could you reflect that fact in this summary? Also for the record, could you have a link to the spec in the changelog? > Source/WebCore/html/shadow/InsertionPoint.cpp:51 > + if (isShadowBoundary() && isActive()) { My feeling is that isShadowBoundary() should contains isActive() since inactive node cannot be a boundary.
Takashi Sakamoto
Comment 3 2012-04-08 20:41:36 PDT
Takashi Sakamoto
Comment 4 2012-04-08 20:45:13 PDT
(In reply to comment #2) > (From update of attachment 135751 [details]) > View in context: https://bugs.webkit.org/attachment.cgi?id=135751&action=review > > > Source/WebCore/ChangeLog:3 > > + [Shadow DOM] InsertionPoint should have isActive() member function. > > This change doesn't look just adding a member function. It also affects the behavior. > Could you reflect that fact in this summary? I see. I updated the summary. > > Also for the record, could you have a link to the spec in the changelog? I added a link, https://dvcs.w3.org/hg/webcomponents/raw-file/tip/spec/shadow/index.html#dfn-active-insertion-point. > > > Source/WebCore/html/shadow/InsertionPoint.cpp:51 > > + if (isShadowBoundary() && isActive()) { > > My feeling is that isShadowBoundary() should contains isActive() since inactive node cannot be a boundary. I see. I added isActive check to isShadowBoundary and removed from attach(). Best regards, Takashi Sakamoto
WebKit Review Bot
Comment 5 2012-04-10 18:48:52 PDT
Comment on attachment 136174 [details] Patch Rejecting attachment 136174 [details] from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: ChangeLog entry in Source/WebCore/ChangeLog is not at the top of the file. Full output: http://queues.webkit.org/results/12383553
Takashi Sakamoto
Comment 6 2012-04-10 21:44:06 PDT
Takashi Sakamoto
Comment 7 2012-04-10 21:44:40 PDT
I modified patch for fixing the following issue: ERROR: ChangeLog entry in Source/WebCore/ChangeLog is not at the top of the file. Best regards, Takashi Sakamoto
Hajime Morrita
Comment 8 2012-04-16 19:09:15 PDT
Comment on attachment 136619 [details] Patch Oops. Sorry for missing this.
WebKit Review Bot
Comment 9 2012-04-16 19:55:58 PDT
Comment on attachment 136619 [details] Patch Clearing flags on attachment: 136619 Committed r114334: <http://trac.webkit.org/changeset/114334>
WebKit Review Bot
Comment 10 2012-04-16 19:56:03 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.